# rust_pusher_client

./: .gitignore  Cargo.toml  README.md  cspell.json  example.env  flake.nix  netlify.toml
examples/: advanced.rs  auto_reconnect.rs  disconnect.rs  presence.rs  private.rs  simple.rs
examples/app/: Cargo.toml  index.html
examples/app/src/: main.rs
src/: disconnect_handler.rs  error.rs  lib.rs  manage_auth.rs  message_to_send.rs  presence_user_data.rs  private_key_auth_provider.rs  receiver.rs  sender.rs  subscription.rs  subscription_handler.rs  wait_for_connection_established.rs
