[package]
name = "pusher_client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
nash-ws = { path = "../nash-ws" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["time", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
# tokio-tungstenite = { optional = true, version = "0.26.2", features = [
#     "native-tls",
# ] }

[dev-dependencies]
dotenvy_macro = "0.15.7"

[features]
std = ["tokio/rt-multi-thread"]
default = ["std"]
