[package]
name = "pusher_client"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/app"]

[dependencies]
fluvio-wasm-timer = "0.2.5"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
iced_futures = { version = "0.13.2", default-features = false }
nash-ws = { path = "../nash-ws" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }

[dev-dependencies]
dotenvy_macro = "0.15.7"

[features]
std = ["tokio/rt-multi-thread"]
default = ["std"]
