[package]
name = "pusher_client"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["examples/app"]

[dependencies]
fluvio-wasm-timer = "0.2.5"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hmac = "0.12.1"
iced_futures = { version = "0.13.2", default-features = false }
nash-ws = { git = "https://github.com/ChocolateLoverRaj/nash-ws", branch = "async-mutex" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
sha2 = { version = "0.10.9", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["macros"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }

[features]
std = ["tokio/rt-multi-thread"]
default = ["std"]

[dev-dependencies]
rand = "0.9.1"
